# one-chat

./: API_DOCUMENTATION.md  README.md  docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile
api/src/: ai_services.rs  auth.rs  db.rs  handlers.rs  main.rs  models.rs  redis_utils.rs  routes.rs
api/src/routes/: attachment_routes.rs  health_routes.rs  message_routes.rs  mod.rs  openai_compatible_routes.rs  share_routes.rs  thread_routes.rs  voice_routes.rs
api/src/tests/: health_check_tests.rs  mod.rs
apps/web/: .env.example  env.ts  middleware.ts  package.json
apps/web/app/health/: page.tsx
apps/web/components/chat/: chat-input.tsx  command-dialog.tsx  edit-message.tsx  index.tsx  message-actions.tsx  tts-button.tsx
apps/web/components/nav/: share-button.tsx
apps/web/components/providers/: index.tsx
apps/web/components/thread/: thread-item.tsx  thread-list.tsx
apps/web/hooks/: use-message-logic.ts  use-voice-transcription.ts
apps/web/lib/: api-client.ts
